--- a/multiplayer-gameplay.html
+++ b/multiplayer-gameplay.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="/assets/css/multiplayer-gameplay.css">
 
     <!-- P1 FIX: DOMPurify FIRST -->
-    <script defer src="https://cdn.jsdelivr.net/npm/dompurify@3.0.6/dist/purify.min.js"
+    <script defer src="/assets/lib/purify.min.js"
             integrity="sha384-cwS6YdhLI7XS60eoDiC+egV0qHp8zI+Cms46R0nbn8JrmoAzV9uFL60etMZhAnSu"
             crossorigin="anonymous"
             referrerpolicy="no-referrer"></script>
