--- a/multiplayer-results.html
+++ b/multiplayer-results.html
@@ -107,7 +107,7 @@
 </footer>
 
 <!-- DOMPurify CDN -->
-<script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.6/dist/purify.min.js"
+<script src="/assets/lib/purify.min.js"
         crossorigin="anonymous"
         referrerpolicy="no-referrer"></script>
 
