--- a/privacy.html
+++ b/privacy.html
@@ -375,7 +375,7 @@
 </div>
 
 <!-- DOMPurify CDN -->
-<script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.6/dist/purify.min.js"
+<script src="/assets/lib/purify.min.js"
         crossorigin="anonymous"
         referrerpolicy="no-referrer"></script>
 
